--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "PORT=3002 react-scripts start",
-    "prod": "pm2 start ./src/server.js --name Portfolio-Web",
+    "prod": "pm2 start ./server.js --name Portfolio-Web",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
